--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,54 +1,43 @@
-<div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-8 offset-2">
-        <h1>{{title}}</h1>
-        <h3>Create and Devour Burgers!</h3>
+<h1>Eat The Burger</h1>
 
+<div class="row align-center" id="burger-container">
+  <div id="fresh" class="col-md-offset-1 col-md-4">
+    {{#each burger}}
+      {{#unless this.devoured}}
+        <div class="burger-div">
 
-        <div class="eatBurger">
-          <h5>Burgers ready to be eaten:</h5>
-          <ul>
-            {{#each burgers}}
-              {{#unless this.devoured}}
-                <li>
-                  {{this.burger_name}}
-                  <form>
-                    <input id="id" type="hidden" name="devoured" value="{{this.id}}">
-                    <button id="devour" type="submit">Devour It!</button>
-                  </form>
-
-                </li>
-              {{/unless}}
-            {{/each}}
-          </ul>
+          <form class="inline-form" action="/?_method=PUT" method="POST">
+            <div class="form-group">
+              <label class="burger-label" for="burger-id">{{this.id}}. {{this.burger_name}}</label>
+              <input type="hidden" id="burger-id" name="id" value="{{this.id}}" />
+              <button class="btn btn-success" type="submit">Devour it!</button>
+            </div>
+          </form>
         </div>
 
-        <div class="devouredBurgers">
-          <h5>Burgers already devoured!</h5>
-          <ul>
-            {{#each burgers}}
-              {{#if this.devoured}}
-                <li>
-                  {{this.burger_name}}
-                </li>
-              {{/if}}
-            {{/each}}
-          </ul>
+      {{/unless}}
+    {{/each}}
+  </div>
+
+  <div id="devoured" class="col-md-offset-1 col-md-4">
+    {{#each burger}}
+      {{#if this.devoured}}
+
+        <div class="burger-div">
+          {{this.id}}. {{this.burger_name}}
         </div>
 
-        <form class="clearfix mb-4" action="POST">
-          <div class="form-group">
-            <label for="burger-text">Create a Burger</label>
-            <input type="text" id="burger-text" class="form-control" aria-describedby="burger-text" placeholder="Enter Burger Text">
-          </div>
-          <button id="submit" class="btn btn-primary float-right">Submit</button>
-        </form>
-
-      </div>
-    </div>
+      {{/if}}
+    {{/each}}
   </div>
 </div>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="/js/index.js"></script>
+<div class="row">
+  <h2>Add a Burger</h2>
+  <form class="form" method="POST" action="/">
+    <div class="form group">
+      <textarea type="text" name="burger_name"></textarea>
+    </div>
+    <button class="btn btn-primary" type="submit">Add A Burger!</button>
+  </form>
+</div>
