--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-  <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
-  <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
-  <title>BURGER MUNCHER</title>
-</head>
-
-<body>
-  {{{body}}}
-</body>
-
+	<meta charset="UTF-8">
+		<link rel="stylesheet" href="/assets/css/style.css" type="text/css" />
+		<title>BURGER MUNCHER</title>
+		<script src="https://code.jquery.com/jquery.js"></script>
+		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+	</head>
+	<body>
+		{{{ body }}}
+	</body>
 </html>
